compiler-core/src/parse/snapshots/gleam_core__parse__tests__doesnt_issue_special_error_for_pythonic_import_if_slash.snap
---
source: compiler-core/src/parse/tests.rs
expression: import one/two.three
---
----- SOURCE CODE
import one/two.three

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:16
  │
1 │ import one/two.three
  │                ^^^^^ I was not expecting this

Found a name, expected one of: 
- `{`
