compiler-core/src/parse/snapshots/gleam_core__parse__tests__error_for_greater_sign_after_invalid_qualified_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() -> wibble.<a> { todo }"
---
----- SOURCE CODE
pub fn main() -> wibble.<a> { todo }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:25
  │
1 │ pub fn main() -> wibble.<a> { todo }
  │                         ^ I was expecting a type name here
