compiler-core/src/parse/snapshots/gleam_core__parse__tests__error_message_when_using_discard_pattern_for_function_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: fn _wibble() -> Nil
---
----- SOURCE CODE
fn _wibble() -> Nil

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:4
  │
1 │ fn _wibble() -> Nil
  │    ^^^^^^^ I'm expecting a lowercase name here

A function name must start with a lowercase letter, and can contain a-z,
0-9, or _.
